spacing in nav fixed

--- a/style.css
+++ b/style.css
@@ -188,26 +188,8 @@ a {
     justify-content: space-between;
     list-style: none;
     padding: 0;
-    gap: 10px;
+    gap: 2em;
     font-weight: 700;
-    max-width: 100%;
-  }
-  .nav-logo {
-    order: -1; /* Places the logo at the start of the flex container */
-  }
-  .nav-logo a {
-    display: flex; /* Ensures the link expands to fit the logo */
-    align-items: center; /* Aligns the logo vertically */
-    padding: 0px 60px 0px 10px;
-  }
-  .logo1 {
-    height: 50px; /* Adjust the size of the logo as needed */
-  }
-  .nav-logo li {
-    margin-right: 200px;
-  }
-  .header-link .logodesktop {
-    padding: 0px 10px;
   }
   .mobile-nav,
   #menu-bars,
@@ -360,7 +342,7 @@ a {
 }
 
 .btn {
-  border-radius: 6 px;
+  border-radius: 6px;
   border: border 1px solid black;
   font-weight: 500;
 }
